# currency_exchange_api

./: .gitignore  pyproject.toml  ruff.toml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  exceptions.py
app/models/: __init__.py  models.py
app/services/: __init__.py  conversion_service.py  rate_service.py  transaction_service.py
tests/: __init__.py  conftest.py
tests/app/: __init__.py  test_main.py
tests/app/services/: __init__.py  test_conversion_service.py  test_rate_service.py
